tests/baselines/reference/unicodeExtendedEscapesInStrings21_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES6.ts(1,15): error TS1199: Unterminated Unicode escape sequence.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES6.ts (1 errors) ====
    var x = "\u{67";
                  
!!! error TS1199: Unterminated Unicode escape sequence.
    